Add custom scheduler, create new endpoint to stop running schedulers and integrate new scheduler into  function
